# wav2vec2_alt

./: LICENSE  README.md
DALI/: DALI_Test_Preprocessing.ipynb  dali_downloader.ipynb  dali_downloader.py  dali_lyrics.ipynb  dali_test4alt_download.py  pyproject.toml  youtube_downloader.ipynb
DSing/: DSing_basics.ipynb  eda_helpers.py  pyproject.toml  wav2vec_inference.ipynb  wav2vec_sizeofdata.ipynb  wav2vec_train.ipynb  wav2vec_train.py
DSing/scripts/: 01_remove_long_songs.sh  02_wav2vec_create_split_metadata.py  03_wav2vec_fix_metadata.py
DSing/tensorboard_logs/: events.out.tfevents.1712431822.540591eade-606.local.17558.0  events.out.tfevents.1712432359.540591eade-606.local.18679.0  events.out.tfevents.1712573842.540591eade-606.local.39004.0  events.out.tfevents.1712606846.540591eade-606.local.34645.0  events.out.tfevents.1712607090.540591eade-606.local.35635.0  events.out.tfevents.1712607139.540591eade-606.local.35813.0  events.out.tfevents.1712608894.540591eade-606.local.42298.0  events.out.tfevents.1712609062.540591eade-606.local.42936.0  events.out.tfevents.1712609373.540591eade-606.local.44143.0  events.out.tfevents.1712609592.540591eade-606.local.45050.0  events.out.tfevents.1712609828.540591eade-606.local.45977.0  events.out.tfevents.1712610531.540591eade-606.local.48554.0
DSing/tensorboard_logs/colab/: events.out.tfevents.1712591796.b27367d5d946.2785.2
DSing/tensorboard_logs/colab/run-20240408-1829/: events.out.tfevents.1712612760.a302573d0ed8.5052.0  events.out.tfevents.1712612940.a302573d0ed8.5052.1  events.out.tfevents.1712612993.a302573d0ed8.5052.2  events.out.tfevents.1712613480.a302573d0ed8.5052.3  events.out.tfevents.1712614689.a302573d0ed8.5052.4
DSing/tensorboard_logs/colab/run-20240408-1930-nofreeze/: events.out.tfevents.1712617906.50472c78bb2f.3752.0
WAV2VEC2/: 01_WAV2VEC_benchmarking.ipynb  02_WAV2VEC_decoding.ipynb  03_WAV2VEC_file_parsing.ipynb  04_WAV2VEC_batch_processing.ipynb  pyproject.toml  tokens.txt  wav2vec_eval.ipynb  wav2vec_train.ipynb  wav2vec_train_latest.ipynb
WHISPER/: whisper_eval.ipynb
(+15 files in other folders)
